auto-test/tests/chapter_18/invalid_parse/struct_decl_two_kws.c
struct struct s;  

int main(void) {
    return 1;
}